# TriangulationFEM

./: CMakeLists.txt  Main.cpp  Resource\random_out.txt  main.cpp
Header/: DataStructure.h  Triangulation.h  Visualization.h
Source/: DelaunayTriangulation.cpp  DotCloudReader.cpp  Vector3D.cpp  Visualization.cpp  _triangle.cpp  _vec3D.cpp  _viz.cpp  delaunay_triangulation.cpp  point_cloud_generator.cpp  point_cloud_reader.cpp
headers/: _viz.h  data_structures.h  delaunay_triangulation.h  point_cloud.h
